--- a/emacs.org
+++ b/emacs.org
@@ -180,6 +180,9 @@ These are non-interactive library functions useful in other parts of this config
 (defun jw--set-font-size (size)
   (set-face-attribute 'default nil :font (jw--font-name size)))
 
+(defun jw--login-shell ()
+  (file-name-nondirectory (getenv "SHELL")))
+
 (defmacro jw--define-menu (name doc &rest args)
   (declare (indent defun))
   (require 'magit-popup)
@@ -242,11 +245,7 @@ For long running processes, this will always toggle back and forth between the p
         (let* ((tmp-script-dir "/tmp/emacs-jw-run-cmd/")
                (tmp-script-rel-filename (replace-regexp-in-string "[^a-zA-Z0-9]+" "-" cmd-process-name))
                (tmp-script-abs-filename (concat tmp-script-dir tmp-script-rel-filename))
-               (tmp-script-exec-program (or (executable-find "zsh") (executable-find "bash") (executable-find "sh")))
-               (tmp-script-source-profile (cond ((string-match "zsh$" tmp-script-exec-program) "source $HOME/.zshrc")
-                                                ((string-match "bash$" tmp-script-exec-program) "source $HOME/.bashrc")
-                                                (t "")))
-               (tmp-script-contents (format "#!%s\n\n%s\n\ncd %s\n\n%s" tmp-script-exec-program tmp-script-source-profile (jw--pwd) prepared-cmd)))
+               (tmp-script-contents (format "#!%s\n\ncd %s\n\n%s" (executable-find (jw--login-shell)) (jw--pwd) prepared-cmd)))
           (when (get-buffer cmd-buffer-name) (kill-buffer cmd-buffer-name))
           (jw--write-to-file tmp-script-contents tmp-script-abs-filename)
           (unless (file-executable-p tmp-script-abs-filename) (chmod tmp-script-abs-filename #o744))
@@ -262,58 +261,33 @@ For long running processes, this will always toggle back and forth between the p
   (call-process "tmux" nil nil nil "send-keys" "-t" tmux-session command "C-m"))
 #+END_SRC
 
+* customization
 ** env
 
-A highly opinionated way of setting up env vars & path
 #+BEGIN_SRC emacs-lisp
 (require 'eshell)
-(require 'subr-x)
-
-(defun jw--env-set-vars (vars-file)
-  (dolist (line (jw--file-lines-to-list vars-file))
-    (unless (= 0 (length line))
-      (let* ((tokens (split-string line "="))
-             (name (car tokens))
-             (value-string (mapconcat 'identity (cdr tokens) "="))
-             (value-env-vars-parsed (substitute-env-vars value-string)) ;; parse lines containing env vars
-             (value (shell-command-to-string (format "echo %s" value-env-vars-parsed)))) ;; parse shell commands in lines
-        (setenv name (string-trim value)))))
-  (setenv "EDITOR" "emacsclient"))
-
-(defun jw--env-set-path (path-file)
-  (let* ((path-list (mapcar 'substitute-env-vars (jw--file-lines-to-list path-file)))
-         (path-str (mapconcat 'identity path-list ":")))
-    (setq exec-path path-list)
-    (setenv "PATH" path-str)
-    (setq eshell-path-env path-str)))
 
 (defun jw-env-set ()
   (interactive)
-  (let ((vars-file (concat user-emacs-directory "env-vars"))
-        (path-file (concat user-emacs-directory "env-path")))
-    (when (file-exists-p vars-file) (jw--env-set-vars vars-file))
-    (when (file-exists-p path-file) (jw--env-set-path path-file))))
+  (let* ((cmd (format "%s -l -i -c env" (jw--login-shell)))
+         (env-big-str (shell-command-to-string cmd))
+         (lines (split-string env-big-str "\n")))
+    (dolist (line lines)
+      (unless (= 0 (length line))
+        (let* ((tokens (split-string line "="))
+               (name (car tokens))
+               (value (mapconcat 'identity (cdr tokens) "=")))
+          (setenv name value)
+          (when (string= name "PATH")
+            (setq exec-path (split-string value ":"))
+            (setq eshell-path-env value))))))
+  (setenv "EDITOR" "emacsclient"))
 
 (jw-env-set)
 (add-to-list 'eshell-mode-hook 'jw-env-set)
+
 #+END_SRC
 
-Example =env-vars= file, symlinked to =~/.emacs.d/env-vars= from a safe place
-#+BEGIN_EXAMPLE
-DROPBOX_HOME=$HOME/Dropbox
-DRIVE_HOME=$HOME/GoogleDrive
-#+END_EXAMPLE
-
-Example =env-path= file, symlinked to =~/.emacs.d/env-path= from a safe place
-#+BEGIN_EXAMPLE
-$HOME/bin
-/usr/local/bin
-/usr/bin
-#+END_EXAMPLE
-
-My terminal rc file parses these same files.
-
-* customization
 ** style
 
 #+BEGIN_SRC emacs-lisp
@@ -854,7 +828,6 @@ If the server is connected and a prefix arg is provided, then invoke a quick /ms
 #+END_SRC
 
 here are some useful rcirc configs to set in in the safe =private= location
-=rcirc-server-alist= is used when calling =rcirc= without prefix arg
 #+BEGIN_SRC emacs-lisp :tangle no
 (setq rcirc-default-nick "nick"
       rcirc-default-user-name "username"
