--- a/emacs.org
+++ b/emacs.org
@@ -320,6 +320,16 @@ For long running processes, this will always toggle back and forth between the p
                                     (set (make-local-variable 'face-remapping-alist) '((default :height 1.3)))))
 #+END_SRC
 
+fix for cursor color in clients falling back to the default theme [[http:emacs.stackexchange.com/a/14575][copied from stackoverflow]]
+#+BEGIN_SRC emacs-lisp
+(require 'frame)
+
+(defun fix-cursor-color-for-emacs-clients (frame)
+  (modify-frame-parameters frame (list (cons 'cursor-color "dark grey"))))
+
+(add-hook 'after-make-frame-functions 'fix-cursor-color-for-emacs-clients)
+#+END_SRC
+
 ** settings
 
 #+BEGIN_SRC emacs-lisp
